# mbf-fastq-processor

./: .gitattributes  .gitignore  1  AGENTS.md  CLAUDE.md  CONDITIONAL_EDITS_PROPOSAL.md  Cargo.toml  Cargo.toml.main  Cargo.toml.original  Cargo.toml.workspace  FUZZING.md  IDEAS_FOR_NEXT_STEPS.md  LICENCE  README.md  REORGANIZATION_PROPOSAL.md  WORKSPACE_MIGRATION.md  WORKSPACE_QUICKSTART.md  WORKSPACE_STATUS.md  WORKSPACE_SUMMARY.md  bacon.toml  deny.toml  extract_test_cases.py  fastp_issues.json  fix.py  flake.nix  logo-prompt.txt  lsp.lua  opencode.json  output.json  parallel_zstd_research.md  rapidgzip_vs_zstd_analysis.md  rename_list.txt  reorganize_tests.sh  security.md  setup_reject_tests.py  should.fq  shu.tomml  symlinks_to_migrate.txt  t.txt  t_cases_x_single_step_x_validation_x_validate_all_reads_same_length_x_fail  (+6 more)
crates/mbf-config/: Cargo.toml
crates/mbf-config/src/: lib.rs
crates/mbf-core/: Cargo.toml
crates/mbf-core/src/: dna.rs  lib.rs  reads.rs
crates/mbf-io/: Cargo.toml
crates/mbf-io/src/: lib.rs
crates/mbf-transformations/: Cargo.toml
crates/mbf-transformations/src/: lib.rs
experiments/memory_usage_hashset_vs_radix_trie/: Cargo.toml  info.txt
mbf-deser/: Cargo.toml
mbf-deser-derive/: Cargo.toml
mbf-deser-derive/src/: lib.rs
mbf-deser/src/: lib.rs
mbf-fastq-processor/: Cargo.toml
mbf-fastq-processor-lsp/: Cargo.toml
mbf-fastq-processor-lsp/src/: backend.rs  completion.rs  diagnostics.rs  hover.rs  main.rs
mbf-fastq-processor/benches/: simple_benchmarks.rs
mbf-fastq-processor/benches/steps/ConcatTags/: bench.toml
mbf-fastq-processor/benches/steps/Demultipex/: bench.toml
mbf-fastq-processor/benches/steps/FilterReservoir/: bench.toml
mbf-fastq-processor/benches/steps/HammingCorrect/: bench.toml
mbf-fastq-processor/benches/steps/MergeReads/: bench.toml
mbf-fastq-processor/benches/steps/Postfix/: bench.toml
mbf-fastq-processor/benches/steps/Prefix/: bench.toml
mbf-fastq-processor/benches/steps/QuantifyTag/: bench.toml  benchmark_quantified.qr.json
mbf-fastq-processor/benches/steps/Rename/: bench.toml
mbf-fastq-processor/benches/steps/Report_CountOligos/: bench.toml
mbf-fastq-processor/benches/steps/Report_DuplicatePerFragment/: bench.toml
mbf-fastq-processor/benches/steps/StoreTagInSequence/: bench.toml
mbf-fastq-processor/benches/steps/StoreTagLocationInComment/: bench.toml
mbf-fastq-processor/benches/steps/TrimAtTag/: bench.toml
mbf-fastq-processor/fuzz/: .gitignore  Cargo.toml  README.md
mbf-fastq-processor/fuzz/corpus/fuzz_config_parser/: sample1.toml
mbf-fastq-processor/fuzz/corpus/fuzz_custom_deserializers/: iupac_code.txt
mbf-fastq-processor/fuzz/corpus/fuzz_fastq_parser/: sample1.fastq
mbf-fastq-processor/fuzz/fuzz_targets/: fastq_parser.rs  fuzz_config_parser.rs  fuzz_custom_deserializers.rs  fuzz_fastq_parser.rs
mbf-fastq-processor/src/: benchmark.rs  config.rs  cookbooks.rs  demultiplex.rs  dna.rs  interactive.rs  io.rs  lib.rs  list_steps.rs  main.rs  output.rs  pipeline.rs  pipeline_async.rs  pipeline_workpool.rs  template.toml  timing.rs  transformations.rs
mbf-fastq-processor/src/cli/: mod.rs  process.rs  validate.rs  verify.rs
mbf-fastq-processor/src/config/: deser.rs  input.rs  options.rs  output.rs  segments.rs
mbf-fastq-processor/src/html/: output.html  template.html
mbf-fastq-processor/src/io/: counting_reader.rs  fileformats.rs  input.rs  output.rs  parsers.rs  reads.rs
mbf-fastq-processor/src/io/output/: compressed_output.rs
mbf-fastq-processor/src/io/parsers/: bam.rs  fasta.rs  fastq.rs
mbf-fastq-processor/src/lsp/: backend.rs  completion.rs  diagnostics.rs  hover.rs
mbf-fastq-processor/src/transformations/: calc.rs  conditional_tag.rs  demultiplex.rs  edits.rs  extract.rs  filters.rs  hamming_correct.rs  internal_steps.rs  js.rs  output_step.rs  prelude.rs  reports.rs  tag.rs  validation.rs
mbf-fastq-processor/src/transformations/calc/: base_content.rs  complexity.rs  expected_error.rs  gc_content.rs  kmers.rs  length.rs  n_count.rs  qualified_bases.rs
mbf-fastq-processor/src/transformations/convert/: eval_expression.rs  mod.rs  regions_to_length.rs
mbf-fastq-processor/src/transformations/edits/: _change_case.rs  convert_quality.rs  cut_end.rs  cut_start.rs  lowercase.rs  lowercase_sequence.rs  lowercase_tag.rs  merge_reads.rs  postfix.rs  prefix.rs  rename.rs  reverse_complement.rs  swap.rs  trim_at_tag.rs  truncate.rs  uppercase.rs  uppercase_sequence.rs  uppercase_tag.rs
mbf-fastq-processor/src/transformations/extract/: anchor.rs  iupac.rs  iupac_suffix.rs  iupac_with_indel.rs  longest_poly_x.rs  low_quality_end.rs  low_quality_start.rs  poly_tail.rs  regex.rs  region.rs  regions.rs  regions_of_low_quality.rs  tag.rs
mbf-fastq-processor/src/transformations/filters/: by_numeric_tag.rs  by_tag.rs  empty.rs  head.rs  reservoir_sample.rs  sample.rs  skip.rs
mbf-fastq-processor/src/transformations/reports/: common.rs  inspect.rs  progress.rs  report.rs  report_base_statistics_merged.rs  report_base_statistics_part1.rs  report_base_statistics_part1_v2.rs  report_base_statistics_part2.rs  report_base_statistics_part2_v2.rs  report_count.rs  report_count_oligos.rs  report_duplicate_count.rs  report_duplicate_fragment_count.rs  report_length_distribution.rs  report_tag_histogram.rs
mbf-fastq-processor/src/transformations/tag/: concat_tags.rs  forget_all_tags.rs  forget_tag.rs  quantify_tag.rs  replace_tag_with_letter.rs  store_tag_in_fastq.rs  (+4 more)
mbf-fastq-processor/tests/: generated.rs  integration_tests.rs  parser.rs  repo_tests.rs  template_and_documentation_verification.rs  test_runner.rs  verify_all_test_cases_present.rs
rapidgzip-wrapper/: .gitignore  Cargo.toml  FINAL_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_TODO.md  README.md  STRUCTURE.md  SUMMARY.md  build.rs
rapidgzip-wrapper/.cargo/: config.toml
rapidgzip-wrapper/cpp/: rapidgzip_c_wrapper.cpp  rapidgzip_c_wrapper.hpp
rapidgzip-wrapper/examples/: basic_usage.rs  benchmark.rs  seek_example.rs
rapidgzip-wrapper/src/: ffi.rs  lib.rs
rapidgzip-wrapper/tests/: integration_test.rs
(+3770 files in other folders)
