[package]
name = "mbf-fastq-processor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "The fast, reliable multitool of FASTQ processing"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bioinformatics", "fastq", "sequencing"]
categories = ["command-line-utilities", "science::bioinformatics::genomics", "science::bioinformatics"]
exclude = [
	"AGENTS.md",
	"bacon.toml",
    "benchmarks/",
	".claude/",
	"CLAUDE.md",
    "cookbooks/*/input/",
    "cookbooks/*/reference_output/",
	"dev/",
	"docs/",
	"experiments/",
	".github/",
	"test_cases/",
]

[workspace]
members = [
    "crates/mbf-core",
    "crates/mbf-io",
    "crates/mbf-transformations",
    "crates/mbf-config",
]
resolver = "2"

[workspace.package]
version = "0.8.1"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
repository = "https://github.com/TyberiusPrime/mbf-fastq-processor"
homepage = "https://tyberiusprime.github.io/mbf-fastq-processor/"

[workspace.dependencies]
# Core dependencies used across multiple crates
anyhow = { version = "1.0.89", default-features = false }
bio = "3.0"
bstr = { version = "1.12.0", default-features = false }
crossbeam = "0.8.4"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.132"
serde_valid = { version = "2.0", default-features = false }
toml = { version = "0.9.5", features = ["parse"], default-features = false }
toml_edit = "0.23"
eserde = { version = "0.1.7", features = ["toml"] }
schemars = { version = "1.1.0", features = ["preserve_order", "schemars_derive"], default-features = false }

# I/O dependencies
niffler = "3.0"
flate2 = { version = "1", default-features = false }
zstd = { version = "0.13.2", default-features = false }
noodles = { version = "0.101.0", features = ["bam", "bgzf", "csi", "sam"] }

# Transformation dependencies
regex = "1.11.1"
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
scalable_cuckoo_filter = "0.4.0"
memchr = { version = "2.7.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
fasteval = "0.2"

# Utility dependencies
enum_dispatch = "0.3.13"
indexmap = { version = "2.9.0", default-features = false }
strum_macros = "0.27.1"
log = "0.4.28"

# Workspace crate dependencies
mbf-core = { path = "crates/mbf-core" }
mbf-io = { path = "crates/mbf-io" }
mbf-transformations = { path = "crates/mbf-transformations" }
mbf-config = { path = "crates/mbf-config" }

[dependencies]
# Workspace crates
mbf-core.workspace = true

# Main dependencies
anyhow.workspace = true
allocation-counter = "0.8.1"
bio.workspace = true
clap = { version = "4.5", default-features = false, features = ["error-context", "help", "std", "usage"] }
crossbeam.workspace = true
csv = "1.3.1"
enum_dispatch.workspace = true
eserde.workspace = true
ex = "0.1.3"
fasteval.workspace = true
flate2.workspace = true
human-panic = { version = "2.0.2", default-features = false }
indexmap.workspace = true
json_value_merge = "2.0.1"
log.workspace = true
memchr.workspace = true
niffler.workspace = true
noodles.workspace = true
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
scalable_cuckoo_filter.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
sha2.workspace = true
strum_macros.workspace = true
tempfile = { version = "3.13.0", default-features = false }
toml.workspace = true
toml_edit.workspace = true
zstd.workspace = true
bstr = { workspace = true, features = ["alloc"] }

[dev-dependencies]
walkdir = "2.5.0"
wait-timeout = "0.2"

[profile.release]
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
