[workspace]
	members = ["mbf-fastq-processor"]
    resolver = "2"

[workspace.lints.clippy]
  unwrap_used = "deny"

[workspace.package]
	edition = "2024"
	version = "0.8.1"
	rust-version = "1.86.0"
	authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
	license = "MIT"
	repository = "https://github.com/TyberiusPrime/mbf-fastq-processor"
	homepage = "https://tyberiusprime.github.io/mbf-fastq-processor/"
	readme = "README.md"
	description = "The fast, reliable multitool of FASTQ processing"
	keywords = ["bioinformatics", "fastq", "sequencing"]
	categories = ["command-line-utilities", "science::bioinformatics::genomics", "science::bioinformatics"]
	exclude = [
	"AGENTS.md",
	"bacon.toml",
    "benchmarks/",
	".claude/",
	"CLAUDE.md",
    "cookbooks/*/input/",
    "cookbooks/*/reference_output/",
	"dev/",
	"docs/",
	"experiments/",
	".github/",
	"test_cases/",
]

[workspace.dependencies]
	anyhow = { version = "1.0.89", default-features = false }
	allocation-counter = "0.8.1"
	bio = "3.0"
	clap = { version = "4.5", default-features = false, features = ["error-context", "help", "std", "usage"] }
	clap_complete = "4.5"
	crossbeam = "0.8.4"
	csv = "1.3.1"
	enum_dispatch = "0.3.13"
	fasteval = "0.2"
	ex = "0.1.3"
	num_cpus = "1.16"
	# I have benchmarked zlib-rs in 08f1b7e00a28413455e5fde5b752aa960de0f9d3
	# to be very slightly faster than gz_zlib-ng-compat
	# in 063d53bcc88f3ead1adfd73e3932e922d39f2496,
	# and though there's a lot of unsafe in zlib-rs it's probably better than the old C code.
	# rust_backend = miniz_oxide is fully safe. Benchmark: says +30% runtime though (f1e8a4ff885d35a5a3c14227e302d955fee4ec0e),
	# so we use with zlib-rs for now
	flate2 = { version = "1", default-features = false }
	human-panic = { version = "2.0.2", default-features = false }
	indexmap = { version = "2.9.0", default-features = false }
	json_value_merge = "2.0.1"
	memchr = { version = "2.7.4", default-features = false }
	niffler = "3.0"
	noodles = { version = "0.101.0", features = ["bam", "bgzf", "csi", "sam"] }
	rand = { version = "0.9.1", default-features = false }
	rand_chacha = { version = "0.9", default-features = false }
	regex = "1.11.1"
    scalable_cuckoo_filter = "0.4.0"
	serde = { version = "1.0.228", default-features = false }
	serde_json = "1.0.132"
	serde_valid = { version = "2.0", default-features = false }
	sha2 = { version = "0.10.8", default-features = false }
	strum_macros = "0.27.1"
	tempfile = { version = "3.13.0", default-features = false }
	toml = { version = "0.9.5", features = ["parse"], default-features = false }
	toml_edit = "0.23"
	zstd = { version = "0.13.2", default-features = false }
	bstr = { version = "1.12.0", default-features = false }
	eserde = { version = "0.1.7", features = ["toml"] }
	gzp = { version = "2.0", default-features = false, features = ["deflate_zlib"] }
	log = "0.4.28"
	schemars = { version = "1.1.0", features = ["preserve_order", "schemars_derive"], default-features = false }
	libc = "0.2"


[profile.release]
	debug = 1


[profile.dev.package."*"]
	opt-level = 3


[profile.dev.build-override]
opt-level = 3

