[package]
name = "mbf-deser-derive"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
quote = "1.0.44"
syn = "2.0.114"

[lints]
workspace = true

[lib]
proc-macro = true
