[package]
name = "mbf-deser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
codesnake = "0.2.1"
num-traits = "0.2.19"
serde = { workspace = true }
thiserror = "2.0"
toml = { workspace = true }
toml_edit.workspace = true
mbf-deser-derive = {path = "../mbf-deser-derive"}
strum = "0.27.2"
strum_macros.workspace = true
strsim = "0.11.1"
memchr.workspace = true
bstr.workspace = true
