[package]
name = "mbf-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TOML configuration parsing and validation for mbf-fastq-processor"

[dependencies]
mbf-core.workspace = true

anyhow.workspace = true
eserde.workspace = true
indexmap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
toml.workspace = true
toml_edit.workspace = true
log.workspace = true

[lib]
name = "mbf_config"
path = "src/lib.rs"
