[package]
name = "mbf-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File I/O, parsers, and output formatting for mbf-fastq-processor"

[dependencies]
mbf-core.workspace = true
mbf-config.workspace = true

anyhow.workspace = true
bio.workspace = true
bstr.workspace = true
crossbeam.workspace = true
flate2.workspace = true
niffler.workspace = true
noodles.workspace = true
zstd.workspace = true
ex = "0.1.3"
tempfile = { version = "3.13.0", default-features = false }

[lib]
name = "mbf_io"
path = "src/lib.rs"
