[package]
name = "mbf-fastq-processor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.13.0"
eserde = { version = "0.1.7", features = ["toml"] }

[dependencies.mbf_fastq_processor]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_config_parser"
path = "fuzz_targets/fuzz_config_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fastq_parser"
path = "fuzz_targets/fuzz_fastq_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_custom_deserializers"
path = "fuzz_targets/fuzz_custom_deserializers.rs"
test = false
doc = false
bench = false
