[package]
name = "mbf-fastq-processor-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mbf_fastq_processor]
path = ".."

[[bin]]
name = "fastq_parser"
path = "fuzz_targets/fastq_parser.rs"
test = false
doc = false
bench = false
